I corrected geowidget height on mobile

--- a/src/app/(pages)/checkout/CheckoutPage/ShippingMethods/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/ShippingMethods/index.module.scss
@@ -65,6 +65,9 @@
 
 .geowidget {
     height: 600px;
+    @include small-break {
+      height: 500px;
+    }
 }
 
 .dpd { 
